--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuepress-theme-reco",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "this is a vuepress theme",
   "main": "index.js",
   "scripts": {
@@ -18,7 +18,7 @@
   "homepage": "https://github.com/recoluan/vuepress-theme-reco#readme",
   "_from": "vuepress-theme-reco@0.0.3",
   "_resolved": "http://registry.npm.taobao.org/vuepress-theme-reco/download/vuepress-theme-reco-0.0.3.tgz",
-  "devDependencies": {
+  "dependencies": {
     "canvas-nest.js": "^2.0.4",
     "leancloud-storage": "^3.10.0",
     "valine": "^1.3.3"
