--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
   "bugs": {
     "url": "https://github.com/recoluan/vuepress-theme-reco/issues"
   },
-  "homepage": "https://github.com/recoluan/vuepress-theme-reco#readme",
-  "_from": "vuepress-theme-reco@0.0.3",
-  "_resolved": "http://registry.npm.taobao.org/vuepress-theme-reco/download/vuepress-theme-reco-0.0.3.tgz",
+  "homepage": "https://recoluan.gitlab.io",
+  "_from": "vuepress-theme-reco@0.1.0",
+  "_resolved": "http://registry.npm.taobao.org/vuepress-theme-reco/download/vuepress-theme-reco-0.1.0.tgz",
   "dependencies": {
     "leancloud-storage": "^3.10.0",
     "valine": "^1.3.3"
