--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "leancloud-storage": "^3.10.1",
     "valine": "^1.3.4",
-    "@vuepress/plugin-blog": "^1.0.0-alpha.46"
+    "@vuepress/plugin-blog": "^1.0.0-alpha.46",
+    "vue-click-outside": "^1.0.7"
   }
 }
