--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
   "_from": "vuepress-theme-reco@0.2.1",
   "_resolved": "http://registry.npm.taobao.org/vuepress-theme-reco/download/vuepress-theme-reco-0.2.1.tgz",
   "dependencies": {
-    "leancloud-storage": "^3.13.0",
-    "valine": "^1.3.6",
-    "@vuepress/plugin-blog": "^1.0.0-alpha.47",
-    "vue-click-outside": "^1.0.7"
+    "leancloud-storage": "3.13.0",
+    "valine": "1.3.6",
+    "@vuepress/plugin-blog": "1.0.0-alpha.47",
+    "vue-click-outside": "1.0.7"
   }
 }
