--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuepress-theme-reco",
-  "version": "1.0.0-alpha.25",
+  "version": "1.0.0-alpha.26",
   "description": "this is a vuepress theme",
   "main": "index.js",
   "scripts": {
@@ -26,7 +26,7 @@
   "dependencies": {
     "leancloud-storage": "3.13.0",
     "valine": "1.3.6",
-    "@vuepress/plugin-blog": "1.0.0-alpha.49",
+    "@vuepress-reco/plugin-blog": "1.0.0-alpha.1",
     "vue-click-outside": "1.0.7"
   }
 }
