--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuepress-theme-reco",
-  "version": "1.0.0-alpha.26",
+  "version": "1.0.0-alpha.27",
   "description": "this is a vuepress theme",
   "main": "index.js",
   "scripts": {
@@ -24,9 +24,9 @@
   "_from": "vuepress-theme-reco@0.2.1",
   "_resolved": "http://registry.npm.taobao.org/vuepress-theme-reco/download/vuepress-theme-reco-0.2.1.tgz",
   "dependencies": {
-    "leancloud-storage": "3.13.0",
-    "valine": "1.3.6",
-    "@vuepress-reco/plugin-blog": "1.0.0-alpha.1",
+    "leancloud-storage": "3.13.2",
+    "valine": "1.3.7",
+    "@vuepress/plugin-blog": "1.0.0-alpha.49",
     "vue-click-outside": "1.0.7"
   }
 }
