--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "leancloud-storage": "3.13.2",
     "valine": "1.3.6",
     "@vuepress/plugin-blog": "1.0.0-alpha.49",
-    "vue-click-outside": "1.0.7"
+    "vue-click-outside": "1.0.7",
+    "screenfull": "4.2.1"
   }
 }
