--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuepress-theme-reco",
-  "version": "1.0.8",
+  "version": "1.0.8-alpha.3",
   "description": "this is a vuepress theme",
   "main": "index.js",
   "scripts": {
