--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuepress-theme-reco",
-  "version": "1.0.8-alpha.5",
+  "version": "1.0.9-alpha.3",
   "description": "this is a vuepress theme",
   "main": "index.js",
   "scripts": {
@@ -26,9 +26,11 @@
   "_from": "vuepress-theme-reco@0.2.1",
   "_resolved": "http://registry.npm.taobao.org/vuepress-theme-reco/download/vuepress-theme-reco-0.2.1.tgz",
   "dependencies": {
+    "@vuepress-reco/vuepress-plugin-back-to-top": "^1.0.3",
+    "@vuepress-reco/vuepress-plugin-pagation": "^1.0.3",
+    "@vuepress-reco/vuepress-plugin-screenfull": "^1.0.0",
     "@vuepress/plugin-blog": "1.0.0-alpha.49",
     "leancloud-storage": "3.13.2",
-    "screenfull": "4.2.1",
     "valine": "1.3.6",
     "vue-click-outside": "1.0.7"
   },
