--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@vuepress-reco/vuepress-plugin-back-to-top": "^1.0.3",
     "@vuepress-reco/vuepress-plugin-pagation": "^1.0.3",
     "@vuepress-reco/vuepress-plugin-screenfull": "^1.0.0",
-    "@vuepress/plugin-blog": "1.0.0-alpha.49",
+    "@vuepress/plugin-blog": "1.3.0",
     "leancloud-storage": "3.13.2",
     "valine": "1.3.6",
     "vue-click-outside": "1.0.7"
