--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuepress-theme-reco",
-  "version": "1.0.9-alpha.6",
+  "version": "1.0.9-alpha.8",
   "description": "this is a vuepress theme",
   "main": "index.js",
   "scripts": {
@@ -27,6 +27,7 @@
   "_resolved": "http://registry.npm.taobao.org/vuepress-theme-reco/download/vuepress-theme-reco-0.2.1.tgz",
   "dependencies": {
     "@vuepress-reco/vuepress-plugin-back-to-top": "^1.0.3",
+    "@vuepress-reco/vuepress-plugin-loading-page": "^1.0.0",
     "@vuepress-reco/vuepress-plugin-pagation": "^1.0.3",
     "@vuepress-reco/vuepress-plugin-screenfull": "^1.0.0",
     "@vuepress/plugin-blog": "1.3.0",
