--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuepress-theme-reco",
-  "version": "1.0.9-alpha.11",
+  "version": "1.0.9-alpha.12",
   "description": "this is a vuepress theme",
   "main": "index.js",
   "scripts": {
@@ -31,6 +31,7 @@
     "@vuepress-reco/vuepress-plugin-pagation": "^1.0.3",
     "@vuepress-reco/vuepress-plugin-screenfull": "^1.0.0",
     "@vuepress-reco/vuepress-plugin-ga": "^1.0.2",
+    "@vuepress-reco/vuepress-plugin-comments": "1.0.0-alpha.1",
     "@vuepress/plugin-blog": "1.3.0",
     "leancloud-storage": "3.13.2",
     "valine": "1.3.6",
