--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@vuepress-reco/vuepress-plugin-screenfull": "^1.0.0",
     "@vuepress-reco/vuepress-plugin-ga": "^1.0.2",
     "@vuepress-reco/vuepress-plugin-comments": "1.0.1",
+    "@vuepress/plugin-medium-zoom": "1.2.0",
     "@vuepress/plugin-blog": "1.3.0",
     "leancloud-storage": "3.13.2",
     "valine": "1.3.6",
