--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "docsearch.js": "^2.5.2",
     "leancloud-storage": "3.13.2",
     "valine": "1.3.6",
-    "vue-click-outside": "1.0.7"
+    "vue-click-outside": "1.0.7",
+    "md5": "2.2.1"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
