--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuepress-theme-reco",
-  "version": "1.1.2",
+  "version": "1.2.0-alpha.2",
   "description": "A simple and beautiful vuepress Blog & Doc theme.",
   "main": "index.js",
   "scripts": {
@@ -29,7 +29,7 @@
   "dependencies": {
     "@vuepress-reco/vuepress-plugin-back-to-top": "^1.0.5",
     "@vuepress-reco/vuepress-plugin-extract-code": "^1.0.3",
-    "@vuepress-reco/vuepress-plugin-loading-page": "^1.0.0",
+    "@vuepress-reco/vuepress-plugin-loading-page": "^1.0.2",
     "@vuepress-reco/vuepress-plugin-pagation": "^1.0.4",
     "@vuepress-reco/vuepress-plugin-screenfull": "^1.0.1",
     "@vuepress-reco/vuepress-plugin-ga": "^1.0.2",
