--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuepress-theme-reco",
-  "version": "1.2.0-alpha.7",
+  "version": "1.2.0-alpha.9",
   "description": "A simple and beautiful vuepress Blog & Doc theme.",
   "main": "index.js",
   "scripts": {
@@ -27,23 +27,23 @@
   "_from": "vuepress-theme-reco@0.2.1",
   "_resolved": "http://registry.npm.taobao.org/vuepress-theme-reco/download/vuepress-theme-reco-0.2.1.tgz",
   "dependencies": {
-    "@vuepress-reco/vuepress-plugin-back-to-top": "^1.0.6",
-    "@vuepress-reco/vuepress-plugin-extract-code": "^1.0.3",
-    "@vuepress-reco/vuepress-plugin-loading-page": "^1.0.5",
-    "@vuepress-reco/vuepress-plugin-pagation": "^1.0.6",
-    "@vuepress-reco/vuepress-plugin-comments": "^1.0.10",
+    "@vuepress-reco/vuepress-plugin-back-to-top": "1.0.6",
+    "@vuepress-reco/vuepress-plugin-extract-code": "1.0.3",
+    "@vuepress-reco/vuepress-plugin-loading-page": "1.0.5",
+    "@vuepress-reco/vuepress-plugin-pagation": "1.0.6",
+    "@vuepress-reco/vuepress-plugin-comments": "1.0.11",
     "@vuepress/plugin-medium-zoom": "1.2.0",
     "@vuepress/plugin-blog": "1.3.0",
-    "docsearch.js": "^2.5.2",
+    "docsearch.js": "2.5.2",
     "leancloud-storage": "3.13.2",
     "valine": "1.3.6",
     "vue-click-outside": "1.0.7",
     "md5": "2.2.1"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.3",
-    "eslint": "^6.4.0",
-    "eslint-plugin-vue": "^5.2.3",
+    "babel-eslint": "10.0.3",
+    "eslint": "6.4.0",
+    "eslint-plugin-vue": "5.2.3",
     "vuepress": "1.2.0"
   }
 }
