--- a/package.json
+++ b/package.json
@@ -1,49 +1,29 @@
 {
   "name": "vuepress-theme-reco",
-  "version": "1.3.3-alpha.1",
-  "description": "A simple and beautiful vuepress Blog & Doc theme.",
+  "version": "1.3.3",
+  "private": true,
   "main": "index.js",
+  "license": "MIT",
   "scripts": {
+    "lerna": "lerna",
     "dev": "vuepress dev example/docs",
     "build": "vuepress build example/docs",
     "eslint-ext": "eslint --ext .js,.vue ./",
-    "eslint-fix": "eslint --fix --ext .js,.vue ./"
+    "eslint-fix": "eslint --fix --ext .js,.vue ./",
+    "version": "lerna version --conventional-commits"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/vuepress-reco/vuepress-theme-reco.git"
-  },
-  "keywords": [
-    "vuepress",
-    "vue",
-    "theme"
+  "workspaces": [
+    "packages/vuepress-theme-reco",
+    "packages/@vuepress-reco/*"
   ],
-  "author": "reco_luan",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/vuepress-reco/vuepress-theme-reco/issues"
-  },
-  "homepage": "https://vuepress-theme-reco.recoluan.com",
-  "_from": "vuepress-theme-reco@0.2.1",
-  "_resolved": "http://registry.npm.taobao.org/vuepress-theme-reco/download/vuepress-theme-reco-0.2.1.tgz",
-  "dependencies": {
-    "@vuepress-reco/vuepress-plugin-back-to-top": "1.0.8",
-    "@vuepress-reco/vuepress-plugin-extract-code": "1.0.3",
-    "@vuepress-reco/vuepress-plugin-loading-page": "1.0.5",
-    "@vuepress-reco/vuepress-plugin-pagation": "1.0.6",
-    "@vuepress-reco/vuepress-plugin-comments": "1.0.14",
-    "@vuepress/plugin-medium-zoom": "1.2.0",
-    "@vuepress/plugin-blog": "1.3.0",
-    "docsearch.js": "2.5.2",
-    "leancloud-storage": "3.13.2",
-    "valine": "1.3.6",
-    "vue-click-outside": "1.0.7",
-    "md5": "2.2.1"
-  },
   "devDependencies": {
-    "babel-eslint": "10.0.3",
-    "eslint": "6.4.0",
-    "eslint-plugin-vue": "5.2.3",
-    "vuepress": "1.2.0"
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-vue": "^6.2.2",
+    "lerna": "^3.20.2",
+    "vuepress": "^1.4.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
