--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,7 @@
   "packages": [
     "packages/*"
   ],
-  "version": "1.3.3",
+  "version": "1.4.0-alpha.0",
   "npmClient": "yarn",
   "useWorkspaces": true
 }
