--- a/packages/vuepress-theme-reco/package.json
+++ b/packages/vuepress-theme-reco/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuepress-theme-reco",
-  "version": "1.3.3-alpha.1",
+  "version": "1.4.0-alpha.0",
   "description": "A simple and beautiful vuepress Blog & Doc theme.",
   "main": "index.js",
   "repository": {
@@ -22,16 +22,16 @@
   "_resolved": "http://registry.npm.taobao.org/vuepress-theme-reco/download/vuepress-theme-reco-0.2.1.tgz",
   "dependencies": {
     "@vuepress-reco/vuepress-plugin-back-to-top": "1.0.8",
+    "@vuepress-reco/vuepress-plugin-comments": "1.0.14",
     "@vuepress-reco/vuepress-plugin-extract-code": "1.0.3",
     "@vuepress-reco/vuepress-plugin-loading-page": "1.0.5",
     "@vuepress-reco/vuepress-plugin-pagation": "1.0.6",
-    "@vuepress-reco/vuepress-plugin-comments": "1.0.14",
-    "@vuepress/plugin-medium-zoom": "1.2.0",
     "@vuepress/plugin-blog": "1.3.0",
+    "@vuepress/plugin-medium-zoom": "1.2.0",
     "docsearch.js": "2.5.2",
     "leancloud-storage": "3.13.2",
+    "md5": "2.2.1",
     "valine": "1.3.6",
-    "vue-click-outside": "1.0.7",
-    "md5": "2.2.1"
+    "vue-click-outside": "1.0.7"
   }
 }
