--- a/packages/vuepress-theme-reco/package.json
+++ b/packages/vuepress-theme-reco/package.json
@@ -33,5 +33,6 @@
     "md5": "2.2.1",
     "valine": "1.3.6",
     "vue-click-outside": "1.0.7"
-  }
+  },
+  "gitHead": "9af3ad5ec3618793625949ad0e11dec6bd54a40a"
 }
