--- a/packages/vuepress-theme-reco/package.json
+++ b/packages/vuepress-theme-reco/package.json
@@ -24,7 +24,7 @@
     "@vuepress-reco/vuepress-plugin-back-to-top": "1.0.8",
     "@vuepress-reco/vuepress-plugin-comments": "1.0.14",
     "@vuepress-reco/vuepress-plugin-extract-code": "1.0.3",
-    "@vuepress-reco/vuepress-plugin-loading-page": "1.0.5",
+    "@vuepress-reco/vuepress-plugin-loading-page": "^1.4.0-alpha.3",
     "@vuepress-reco/vuepress-plugin-pagation": "1.0.6",
     "@vuepress/plugin-blog": "1.3.0",
     "@vuepress/plugin-medium-zoom": "1.2.0",
