--- a/packages/@vuepress-reco/vuepress-plugin-pagation/package.json
+++ b/packages/@vuepress-reco/vuepress-plugin-pagation/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@vuepress-reco/vuepress-plugin-loading-page",
-  "version": "1.4.0-alpha.3",
-  "description": "Loading page plugin for vuepress-theme-reco or other vuepress theme",
+  "name": "@vuepress-reco/vuepress-plugin-pagation",
+  "version": "1.0.6",
+  "description": "Pagation plugin for vuepress-theme-reco or other vuepress theme",
   "keywords": [
     "vuepress-theme-reco",
-    "loading-page",
+    "pagation",
     "vuepress"
   ],
   "homepage": "https://vuepress-theme-reco.recoluan.com",
@@ -17,6 +17,5 @@
   },
   "license": "MIT",
   "author": "reco_luan <recoluan@outlook.com>",
-  "main": "index.js",
-  "gitHead": "c3a1db8487bece9341b6269a0f6ebf910cd5462a"
+  "main": "index.js"
 }
