--- a/packages/@vuepress-reco/vuepress-plugin-comments/package.json
+++ b/packages/@vuepress-reco/vuepress-plugin-comments/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vuepress-reco/vuepress-plugin-comments",
-  "version": "1.0.14",
+  "version": "1.4.0-alpha.4",
   "description": "Comments plugin for vuepress-theme-reco or other vuepress theme",
   "keywords": [
     "vuepress-theme-reco",
