--- a/packages/vuepress-theme-reco/package.json
+++ b/packages/vuepress-theme-reco/package.json
@@ -1,31 +1,29 @@
 {
   "name": "vuepress-theme-reco",
-  "version": "1.4.0-alpha.3",
+  "version": "1.4.0-alpha.4",
   "description": "A simple and beautiful vuepress Blog & Doc theme.",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/vuepress-reco/vuepress-theme-reco.git"
-  },
   "keywords": [
     "vuepress",
     "vue",
     "theme"
   ],
-  "author": "reco_luan",
-  "license": "MIT",
+  "homepage": "https://vuepress-theme-reco.recoluan.com",
   "bugs": {
     "url": "https://github.com/vuepress-reco/vuepress-theme-reco/issues"
   },
-  "homepage": "https://vuepress-theme-reco.recoluan.com",
-  "_from": "vuepress-theme-reco@0.2.1",
-  "_resolved": "http://registry.npm.taobao.org/vuepress-theme-reco/download/vuepress-theme-reco-0.2.1.tgz",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/vuepress-reco/vuepress-theme-reco.git"
+  },
+  "license": "MIT",
+  "author": "reco_luan",
+  "main": "index.js",
   "dependencies": {
-    "@vuepress-reco/vuepress-plugin-back-to-top": "1.0.8",
-    "@vuepress-reco/vuepress-plugin-comments": "1.0.14",
+    "@vuepress-reco/vuepress-plugin-back-to-top": "^1.4.0-alpha.4",
+    "@vuepress-reco/vuepress-plugin-comments": "^1.4.0-alpha.4",
     "@vuepress-reco/vuepress-plugin-extract-code": "1.0.3",
-    "@vuepress-reco/vuepress-plugin-loading-page": "^1.4.0-alpha.3",
-    "@vuepress-reco/vuepress-plugin-pagation": "1.0.6",
+    "@vuepress-reco/vuepress-plugin-loading-page": "^1.4.0-alpha.4",
+    "@vuepress-reco/vuepress-plugin-pagation": "^1.4.0-alpha.4",
     "@vuepress/plugin-blog": "1.3.0",
     "@vuepress/plugin-medium-zoom": "1.2.0",
     "docsearch.js": "2.5.2",
@@ -34,5 +32,7 @@
     "valine": "1.3.6",
     "vue-click-outside": "1.0.7"
   },
-  "gitHead": "c3a1db8487bece9341b6269a0f6ebf910cd5462a"
+  "gitHead": "c3a1db8487bece9341b6269a0f6ebf910cd5462a",
+  "_from": "vuepress-theme-reco@0.2.1",
+  "_resolved": "http://registry.npm.taobao.org/vuepress-theme-reco/download/vuepress-theme-reco-0.2.1.tgz"
 }
