--- a/packages/@vuepress-reco/vuepress-plugin-back-to-top/package.json
+++ b/packages/@vuepress-reco/vuepress-plugin-back-to-top/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vuepress-reco/vuepress-plugin-back-to-top",
-  "version": "1.4.0-alpha.4",
+  "version": "1.4.0",
   "description": "Back-to-top plugin for vuepress-theme-reco or other vuepress theme",
   "keywords": [
     "vuepress-theme-reco",
