--- a/packages/vuepress-theme-reco/package.json
+++ b/packages/vuepress-theme-reco/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuepress-theme-reco",
-  "version": "1.4.0-alpha.4",
+  "version": "1.4.0",
   "description": "A simple and beautiful vuepress Blog & Doc theme.",
   "keywords": [
     "vuepress",
@@ -19,10 +19,10 @@
   "author": "reco_luan",
   "main": "index.js",
   "dependencies": {
-    "@vuepress-reco/vuepress-plugin-back-to-top": "^1.4.0-alpha.4",
-    "@vuepress-reco/vuepress-plugin-comments": "^1.4.0-alpha.4",
-    "@vuepress-reco/vuepress-plugin-loading-page": "^1.4.0-alpha.4",
-    "@vuepress-reco/vuepress-plugin-pagation": "^1.4.0-alpha.4",
+    "@vuepress-reco/vuepress-plugin-back-to-top": "^1.4.0",
+    "@vuepress-reco/vuepress-plugin-comments": "^1.4.0",
+    "@vuepress-reco/vuepress-plugin-loading-page": "^1.4.0",
+    "@vuepress-reco/vuepress-plugin-pagation": "^1.4.0",
     "@vuepress/plugin-blog": "1.3.0",
     "@vuepress/plugin-medium-zoom": "1.2.0",
     "docsearch.js": "2.5.2",
