--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "bootstrap": "lerna bootstrap",
     "build": "vuepress build example",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 2",
     "commit": "git add . && git-cz",
     "dev": "vuepress dev example",
     "eslint-ext": "eslint --ext .js,.vue ./",
