--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,7 @@
   "packages": [
     "packages/*"
   ],
-  "version": "1.4.1-alpha.1",
+  "version": "1.4.1",
   "npmClient": "yarn",
   "useWorkspaces": true
 }
