--- a/packages/vuepress-theme-reco/package.json
+++ b/packages/vuepress-theme-reco/package.json
@@ -27,7 +27,8 @@
     "@vuepress/plugin-medium-zoom": "1.5.0",
     "docsearch.js": "2.6.3",
     "md5": "2.2.1",
-    "vue-click-outside": "1.1.0"
+    "vue-click-outside": "1.1.0",
+    "vuepress-plugin-smooth-scroll": "^0.0.9"
   },
   "gitHead": "c3a1db8487bece9341b6269a0f6ebf910cd5462a",
   "_from": "vuepress-theme-reco@0.2.1",
