--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "vuepress build example",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 2",
     "commit": "git add . && git-cz",
-    "dev": "vuepress dev example",
+    "dev": "vuepress dev example --open --host=localhost",
     "eslint-ext": "eslint --ext .js,.vue ./",
     "eslint-fix": "eslint --fix --ext .js,.vue ./",
     "prepublish": "lerna publish --dist-tag next",
