--- a/packages/@vuepress-reco/vuepress-plugin-comments/package.json
+++ b/packages/@vuepress-reco/vuepress-plugin-comments/package.json
@@ -26,5 +26,8 @@
     "@vssue/api-gitlab-v4": "^1.1.1",
     "valine": "^1.4.14",
     "vssue": "^1.4.6"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
