--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "vuepress build example",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 2",
     "commit": "git add . && git-cz",
-    "dev": "vuepress dev example --open --host=localhost",
+    "dev": "vuepress dev example",
     "eslint-ext": "eslint --ext .js,.vue ./",
     "eslint-fix": "eslint --fix --ext .js,.vue ./",
     "prepublish": "lerna publish --dist-tag next",
@@ -45,6 +45,10 @@
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
+    "@types/events": "^3.0.0",
+    "@types/unist": "^2.0.3",
+    "@types/vfile": "^4.0.0",
+    "@types/vfile-message": "^2.0.0",
     "babel-eslint": "^10.1.0",
     "commitizen": "^4.1.2",
     "conventional-changelog-cli": "^2.0.34",
@@ -55,6 +59,7 @@
     "lerna": "^3.22.0",
     "lint-staged": "^10.2.7",
     "sort-package-json": "^1.44.0",
+    "typescript": "4.1.2",
     "vuepress": "^1.5.0"
   },
   "publishConfig": {
