--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   ],
   "scripts": {
     "bootstrap": "lerna bootstrap",
-    "build": "vuepress build example",
+    "build": "concurrently \"npm run build --prefix packages/@vuepress-reco/core\"",
+    "build:example": "vuepress build example",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 2",
     "commit": "git add . && git-cz",
     "dev": "vuepress dev example",
@@ -46,19 +47,23 @@
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@types/events": "^3.0.0",
+    "@types/jest": "^26.0.15",
     "@types/unist": "^2.0.3",
     "@types/vfile": "^4.0.0",
     "@types/vfile-message": "^2.0.0",
     "babel-eslint": "^10.1.0",
     "commitizen": "^4.1.2",
+    "concurrently": "^5.3.0",
     "conventional-changelog-cli": "^2.0.34",
     "cz-customizable": "^6.2.0",
     "eslint": "^6.8.0",
     "eslint-plugin-vue": "^6.2.2",
     "husky": "^4.2.5",
+    "jest": "^26.6.3",
     "lerna": "^3.22.0",
     "lint-staged": "^10.2.7",
     "sort-package-json": "^1.44.0",
+    "ts-jest": "^26.4.4",
     "typescript": "4.1.2",
     "vuepress": "^1.5.0"
   },
