--- a/packages/@vuepress-reco/core/tsconfig.json
+++ b/packages/@vuepress-reco/core/tsconfig.json
@@ -1,10 +1,11 @@
 {
   "extends": "../../../tsconfig.json",
-  "compilerOptions": {
-    "outDir": "./lib",
-    "experimentalDecorators": true
-  },
   "include": [
     "./src"
-  ]
+  ],
+  "compilerOptions": {
+    "jsx": "react-native",
+    "outDir": "./lib",
+    "noImplicitAny": false
+  }
 }
