--- a/packages/@vuepress-reco/core/package.json
+++ b/packages/@vuepress-reco/core/package.json
@@ -25,6 +25,7 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
+    "@vue/composition-api": "^1.0.0-beta.20",
     "vue": "^2.6.12",
     "vue-property-decorator": "^9.1.2"
   },
