--- a/packages/vuepress-theme-reco/package.json
+++ b/packages/vuepress-theme-reco/package.json
@@ -19,6 +19,7 @@
   "author": "reco_luan",
   "main": "index.js",
   "dependencies": {
+    "@vue/composition-api": "^1.0.0-beta.20",
     "@vuepress-reco/core": "^1.5.7",
     "@vuepress-reco/vuepress-plugin-back-to-top": "^1.5.7",
     "@vuepress-reco/vuepress-plugin-comments": "^1.5.7",
