chore: edit publishConfig

--- a/packages/@vuepress-reco/core/package.json
+++ b/packages/@vuepress-reco/core/package.json
@@ -30,6 +30,6 @@
     "vue-property-decorator": "^9.1.2"
   },
   "publishConfig": {
-    "registry": "https://registry.yarnpkg.com"
+    "access": "public"
   }
 }
