--- a/package.json
+++ b/package.json
@@ -43,10 +43,6 @@
       "path": "node_modules/cz-customizable"
     }
   },
-  "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.9.1",
-    "eslint-plugin-typescript": "^0.14.0"
-  },
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
@@ -55,12 +51,14 @@
     "@types/unist": "^2.0.3",
     "@types/vfile": "^4.0.0",
     "@types/vfile-message": "^2.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
     "babel-eslint": "^10.1.0",
     "commitizen": "^4.1.2",
     "concurrently": "^5.3.0",
     "conventional-changelog-cli": "^2.0.34",
     "cz-customizable": "^6.2.0",
     "eslint": "^6.8.0",
+    "eslint-plugin-typescript": "^0.14.0",
     "eslint-plugin-vue": "^6.2.2",
     "husky": "^4.2.5",
     "jest": "^26.6.3",
