--- a/packages/vuepress-theme-reco/package.json
+++ b/packages/vuepress-theme-reco/package.json
@@ -19,7 +19,7 @@
   "author": "reco_luan",
   "main": "index.js",
   "dependencies": {
-    "@vue/composition-api": "^1.0.0-beta.26",
+    "@vue/composition-api": "1.0.0-beta.26",
     "@vuepress-reco/core": "^1.6.2",
     "@vuepress-reco/vuepress-plugin-back-to-top": "^1.6.0",
     "@vuepress-reco/vuepress-plugin-comments": "^1.6.0",
