--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,7 @@
   "packages": [
     "packages/*"
   ],
-  "version": "1.6.13",
+  "version": "1.6.14-beta.0",
   "npmClient": "yarn",
   "useWorkspaces": true
 }
