--- a/packages/@vuepress-reco/core/package.json
+++ b/packages/@vuepress-reco/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vuepress-reco/core",
-  "version": "1.6.13",
+  "version": "1.6.14-beta.0",
   "description": "The core library of vuepress-theme-reco.",
   "homepage": "https://vuepress-theme-reco.recoluan.com/",
   "bugs": {
