--- a/packages/vuepress-theme-reco/package.json
+++ b/packages/vuepress-theme-reco/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuepress-theme-reco",
-  "version": "1.6.13",
+  "version": "1.6.14-beta.0",
   "description": "A simple and beautiful vuepress Blog & Doc theme.",
   "keywords": [
     "vuepress",
@@ -19,7 +19,7 @@
   "author": "reco_luan",
   "main": "index.js",
   "dependencies": {
-    "@vuepress-reco/core": "^1.6.13",
+    "@vuepress-reco/core": "^1.6.14-beta.0",
     "@vuepress-reco/vuepress-plugin-back-to-top": "^1.6.13",
     "@vuepress-reco/vuepress-plugin-comments": "^1.6.13",
     "@vuepress-reco/vuepress-plugin-pagation": "^1.6.13",
