--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,6 @@
 {
-  "packages": [
-    "packages/*"
-  ],
-  "version": "1.6.15",
+  "packages": ["packages/*"],
+  "version": "1.6.16",
   "npmClient": "yarn",
   "useWorkspaces": true
 }
